--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 annotated-types==0.7.0
-anyio==4.10.0
-certifi==2025.8.3
-click==8.2.1
-colorama==0.4.6
-fastapi==0.116.1
+anyio==4.10.0       
+Authlib==1.6.3      
+certifi==2025.8.3   
+cffi==2.0.0
+click==8.2.1        
+colorama==0.4.6     
+cryptography==46.0.1
+fastapi==0.116.1    
 gpxpy==1.6.2
 greenlet==3.2.4
 h11==0.16.0
@@ -11,6 +14,7 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
+pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
 python-dotenv==1.1.1
